# lifemap-back

./: .editorconfig  .gitignore  README.md  inventory.yml  inventory_example.yml
ansible/: install_back.yml  install_builder.yml  install_front.yml  install_system.yml  inventory_example.yml
ansible/files/: Caddyfile
ansible/templates/: backend_hostname_bbox.js.j2  env.j2  server-address-ncbi.js.j2
back/: 00_install_system.yml  00_install_system_back.yml  docker-compose.yml  install_back.yml  install_builder.yml  install_front.yml  update.yml
back/bbox/: bbox.toml.j2
back/builder/: pyproject.toml  update_lifemap.sh
back/builder/tree/: Main.py  (+5 more)
back/caddy/: Caddyfile.j2
back/docker/: docker-compose.yml
back/mod_tile_deepzoom/: 000-default.conf  Dockerfile  renderd.conf
back/postgis/: postgresql.conf
back/solr/: Dockerfile  schema.xml  security.json  solrconfig.xml
back/style/: lifemap_nolabels.xml  lifemap_onlylabels.xml  lifemap_style.xml
back/templates/: Caddyfile.j2  bbox.toml.j2  datasource-settings.xml.inc.j2  env.j2
builder/: cron_update.sh  prerender_bbox.sh  prerender_mod_tiles.sh  pyproject.toml  update_lifemap.sh
builder/scripts/: wikidata_taxids.py
builder/taxo/: ranks.csv
builder/tree/: AdditionalInfo.py  Convert2Rdata.R  ConvertAndCompress.R  Main.py  Traverse.py  Traverse_To_Pgsql_2.py  check_ranks.py  config.py  db.py  export_data.py  export_metadata.py  getTrees.py  getTrees_fun.py  utils.py
common/: install.yml
common/files/: tmux.conf
front/: 00_install_system_front.yml  install_front.yml
front/HTTP-NCBI/: index.html
(+24 files in other folders)
